# sports.ai

./: .gitignore  .pre-commit-config.yaml  README.md  app.json  create_dataset.py  dataset.csv  demo.py  environment.yml  inference.ipynb  metro.config.js  model.ipynb  model.py  model2.ipynb  model_state_dict.pt  mp_utils.py  package-lock.json  package.json  pose.ipynb  pyproject.toml  rm_spaces.sh  server.py  tsconfig.json
Tennis/: PoseModule.py  TennisFrameTest.py  TennisMain.py  TennisProcessing.py  frame_split.py  frame_split2.py  import json.py
ai-fitness-trainer-using-mediapipe/: demo.py
ai-fitness-trainer-using-mediapipe/pages/: 1_📷️_Live_Stream.py  2_ ⬆️_Upload_Video.py
app/: App.js  _layout.tsx  index.tsx  login.tsx  metro.config.js  package-lock.json  package.json  signup.tsx  styles.ts
app/(app)/: _layout.tsx  home.tsx  profile.tsx  test.tsx
app/(main)/: profile.tsx
app/assets/tfjs-target-directory/: model.json
app/assets/theme/: index.js
app/config/: firebase.js  firebase.ts
app/hooks/: useAuth.js  useAuth.tsx
app/navigation/: appNavigation.js  appNavigation.tsx
app/screens/: HomeScreen.js  LoginScreen.js  ProfileScreen.js  SignUpScreen.js  TestScreen.js  WelcomeScreen.js
assets/: theme.ts
coord_dataset/: create_dataset.py
datasets/: coord_dataset.csv  create_dataset.py  dataset.csv
model_tests/: converted_model.tflite  model.h5  model.json  model.onnx  test.py
model_tests/model.pb/: fingerprint.pb  saved_model.pb
model_training/: inference.ipynb  model.ipynb  model.py  test.ipynb  video.py
models/: model_state_dict_CN_S200_5_D0.pt  model_state_dict_CN_S200_5_D25.pt  model_state_dict_CN_S200_5_D25_66.pt  model_state_dict_CN_S50_4_D0.pt  models.py
pose/: classifier_model_test.ipynb  mp_utils.py  pose.ipynb
