[tool.interrogate]
exclude = ["Tennis"]
ignore-regex = ["^forward$", "^load$"]
ignore-init-method = true

[tool.poetry]
name = "sports-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.2"
flask-httpauth = "^4.8.0"
flask-cors = "^4.0.0"
torch = "^2.2.0"
torchvision = "^0.17.0"
mediapipe = "^0.10.9"
av = "^11.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
