[tool.poetry]
name = "sports-ai"
version = "0.1.0"
description = ""
authors = ["Daniel Zhu <danielfangzhu@gmail.com>", "Tanay Agrawal <tanayagrawal31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
flask-httpauth = "^4.8.0"
flask-cors = "^4.0.0"
torch = "^2.2.0"
torchvision = "^0.17.0"
mediapipe = "^0.10.9"
av = "^11.0.0"
label-studio = "^1.11.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
